--- a/Frontend/pcpokemon-api-app/src/index.css
+++ b/Frontend/pcpokemon-api-app/src/index.css
@@ -1,3 +1,38 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    html {
+      font-family: "Proxima Nova", system-ui, sans-serif;
+    }
+}
+
+:root {
+    font-family:'Segoe UI', sans-serif;
+}
+
+body {
+    background: white;
+}
+
+li {
+    list-style: none;
+    cursor: pointer;
+    position: relative;
+}
+
+li:hover::before {
+    position: absolute;
+    content: '';
+    height: 4px;
+    width: 100%;
+    background: #2a68ff;
+    right: 0;
+    bottom: -10px;
+    color: #2a68ff;
+}
+
+.icon {
+    cursor: pointer;
+}
